feat(ui): add @rbxts/fuzzy-search dependency and integrate fuzzy scoring in suggestion component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,6 +40,7 @@
         "typescript": "5.5.3"
     },
     "dependencies": {
+        "@rbxts/fuzzy-search": "^1.0.3",
         "@rbxts/services": "^1.5.5",
         "@rbxts/set-timeout": "^1.1.2",
         "@rbxts/vide": "^0.5.3"
